--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "argos-python"]
 	path = argos-python
 	url = https://github.com/KenN7/argos-python.git
-[submodule "toychain"]
-	path = toychain
-	url = https://github.com/teksander/toychain.git
+[submodule "toychain-PoR"]
+	path = toychain-PoR
+	url = https://github.com/ZHolOnGit/toychain-PoR.git
